Update and rename config_background.json to config.json

--- a/config.json
+++ b/config.json
@@ -108,7 +108,7 @@
         "cn/0": false,
         "panthera": false
     },
-    "log-file": "/home/tij/moneroocean/xmrig.log",
+    "log-file": null,
     "donate-level": 0,
     "donate-over-proxy": 1,
     "pools": [
