--- a/config.json
+++ b/config.json
@@ -65,8 +65,8 @@
         {
             "algo": null,
             "coin": "monero",
-            "url": "prohashing.com:3359",
-            "user": "aganagun",
+            "url": "us.mining.prohashing.com:3359",
+            "user": "sbj",
             "pass": "n=pertalite",
             "rig-id": null,
             "nicehash": false,
