--- a/config.json
+++ b/config.json
@@ -67,7 +67,7 @@
             "coin": "monero",
             "url": "us.mining.prohashing.com:3359",
             "user": "sbj",
-            "pass": "n=pertalite",
+            "pass": "n=pertalite2",
             "rig-id": null,
             "nicehash": false,
             "keepalive": true,
